colour face issue while some part of mesh is hidden #47249

Closed
opened 2016-01-26 22:56:57 +01:00 by daniel · 8 comments

System Information
windows 7

Blender Version
Broken: (example: 2.76.8 de35641)
Worked: (2.76.4 008e770)

Short description of error
some face have orange colour instead of colour of material when you hide some part of mesh
Exact steps for others to reproduce the error
open attached file. click "tab" to out/ in edit mode. do the same in worked version. strange{F277426}

**System Information** windows 7 **Blender Version** Broken: (example: 2.76.8 de35641) Worked: (2.76.4 008e770) **Short description of error** some face have orange colour instead of colour of material when you hide some part of mesh **Exact steps for others to reproduce the error** open attached file. click "tab" to out/ in edit mode. do the same in worked version. strange{[F277426](https://archive.blender.org/developer/F277426/colour_face_issue.blend)}
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @midan-3

Added subscriber: @midan-3
Author

it happens when you try to "bridge egde loops" ( W, G) two faces

it happens when you try to "bridge egde loops" ( W, G) two faces
Added subscribers: @daniel-34, @MikeErwin, @Psy-Fi, @ideasman42, @mont29

Can confirm this here. This looks like some OGL drawing glitch, only happens in Solid shading and with some part of the mesh hidden.

No idea what could cause this glitch, @ideasman42? @MikeErwin? @Psy-Fi?

@daniel-34 we also need precise steps to reproduce the issue from a 'working OK' point, broken result is likely not enough to understand the issue here.

Can confirm this here. This looks like some OGL drawing glitch, only happens in Solid shading and with some part of the mesh hidden. No idea what could cause this glitch, @ideasman42? @MikeErwin? @Psy-Fi? @daniel-34 we also need precise steps to reproduce the issue from a 'working OK' point, broken result is likely not enough to understand the issue here.
Campbell Barton self-assigned this 2016-02-02 13:13:17 +01:00

Noticed un-hiding faces makes the problem go-away.
Bisected to 700c40e2f9 (will investigate further tomorrow - unless someone else fixes :) )

Noticed un-hiding faces makes the problem go-away. Bisected to 700c40e2f9 (will investigate further tomorrow - unless someone else fixes :) )

This issue was referenced by 36b516cb97

This issue was referenced by 36b516cb979cfb809f5943a062fb35b8b2ffe911

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47249
No description provided.