Fix T47249: Wrong edit-mesh material color w/ hidden faces

Regression in 700c40e2

Also avoid unnecessary flushes with material changes with hidden faces.